# liongate

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust-ci.yml
lion/lion_capability/: Cargo.toml
lion/lion_capability/src/: lib.rs
lion/lion_capability/src/attenuation/: combine.rs  filter.rs  mod.rs  proxy.rs
lion/lion_capability/src/check/: aggregator.rs  audit.rs  engine.rs  mod.rs
lion/lion_capability/src/model/: capability.rs  composite.rs  file.rs  memory.rs  message.rs  mod.rs  network.rs  plugin_call.rs
lion/lion_capability/src/store/: in_memory.rs  mod.rs  partial_revocation.rs
lion/lion_cli/: Cargo.toml
lion/lion_cli/src/: integration.rs  main.rs
lion/lion_cli/src/commands/: plugin.rs  system.rs  workflow.rs
lion/lion_cli/tests/: command_integration_tests.rs
lion/lion_concurrency/: Cargo.toml
lion/lion_concurrency/src/: lib.rs
lion/lion_concurrency/src/actor/: mailbox.rs  mod.rs  supervisor.rs  system.rs
lion/lion_concurrency/src/pool/: instance.rs  mod.rs  resource.rs  thread.rs
lion/lion_concurrency/src/scheduler/: executor.rs  mod.rs
lion/lion_concurrency/src/sync/: atomic.rs  lock.rs  mod.rs
lion/lion_core/: Cargo.toml  README.md
lion/lion_core/src/: error.rs  id.rs  lib.rs  macros.rs
lion/lion_core/src/traits/: capability.rs  concurrency.rs  isolation.rs  mod.rs  plugin.rs  workflow.rs
lion/lion_core/src/types/: access.rs  memory.rs  mod.rs  plugin.rs  workflow.rs
lion/lion_core/src/utils/: config.rs  logging.rs  mod.rs  version.rs
lion/lion_core/tests/: concurrency_test.rs  events_test.rs  integration_test.rs  isolation_test.rs
lion/lion_isolation/: Cargo.toml
lion/lion_isolation/src/: lib.rs
lion/lion_isolation/src/interface/: capability.rs  default_capability_checker.rs  mod.rs
lion/lion_isolation/src/manager/: backend.rs  lifecycle.rs  mod.rs  pool.rs
lion/lion_isolation/src/resource/: limiter.rs  metering.rs  mod.rs  usage.rs
lion/lion_isolation/src/wasm/: engine.rs  hostcall.rs  memory.rs  mod.rs  module.rs
lion/lion_isolation/tests/: integration_test.rs
lion/lion_observability/: Cargo.toml  README.md
lion/lion_observability/examples/: plugin_demo.rs
lion/lion_observability/src/: capability.rs  config.rs  context.rs  error.rs  lib.rs  logging.rs  metrics.rs  plugin.rs  tracing_system.rs
lion/lion_observability/tests/: integration_test.rs
lion/lion_policy/: Cargo.toml
lion/lion_policy/src/: error.rs  lib.rs
lion/lion_policy/src/engine/: aggregator.rs  audit.rs  evaluator.rs  mod.rs
lion/lion_policy/src/integration/: mapper.rs  mod.rs  resolver.rs
lion/lion_policy/src/model/: constraint.rs  evaluation.rs  mod.rs  rule.rs
lion/lion_policy/src/store/: in_memory.rs  mod.rs
lion/lion_policy/tests/: debug_mapper_test.rs  debug_resolver_test.rs  debug_tests.rs
lion/lion_runtime/: Cargo.toml
lion/lion_runtime/src/: lib.rs
lion/lion_runtime/src/capabilities/: manager.rs  mod.rs  resolution.rs
lion/lion_runtime/src/plugin/: lifecycle.rs  manager.rs  mod.rs  registry.rs
lion/lion_runtime/src/system/: bootstrap.rs  config.rs  mod.rs  shutdown.rs
lion/lion_runtime/src/workflow/: execution.rs  manager.rs  mod.rs
lion/lion_workflow/: Cargo.toml  README.md
lion/lion_workflow/src/: integration_tests.rs  lib.rs
lion/lion_workflow/src/engine/: context.rs  executor.rs  mod.rs  scheduler.rs
lion/lion_workflow/src/model/: definition.rs  edge.rs  mod.rs  node.rs
lion/lion_workflow/src/patterns/: mod.rs
lion/lion_workflow/src/patterns/event/: broker.rs  mod.rs  retry.rs  store.rs  subscription.rs  types.rs
lion/lion_workflow/src/patterns/saga/: definition.rs  execution.rs  mod.rs  orchestrator.rs  step.rs  types.rs
lion/lion_workflow/src/patterns/tests/: event_tests.rs  mod.rs  saga_tests.rs
lion/lion_workflow/src/state/: checkpoint.rs  machine.rs  mod.rs  storage.rs
lion/lion_workflow/src/utils/: serialization.rs
lion/lion_workflow/tests/: acyclic_check_test.rs
scripts/: ci.sh  setup_aliases.sh  test_cli.sh
