[package]
name = "lion_core"
version = "0.1.0"
edition = "2021"
description = "Core types and interfaces for the Lion microkernel system"
authors = ["Haiyang Li"]
license = "Apache-2.0"
documentation = "https://docs.rs/lion_core"
repository = "https://github.com/lion/lion"
readme = "README.md"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
log = "0.4"

[dev-dependencies]
proptest = "1.0"
tempfile = "3.3"
mockall = "0.13"

[features]
default = []
async = []