[package]
name = "lion_isolation"
version = "0.1.0"
edition = "2021"
description = "Isolation system for the Lion microkernel"
authors = ["Haiyang Li"]
license = "Apache-2.0"

[dependencies]
# Core dependencies
lion_core = { path = "../lion_core" }
lion_capability = { path = "../lion_capability", optional = true }
lion_concurrency = { path = "../lion_concurrency", optional = true }

# WebAssembly runtime
wasmtime = { version = "30.0", features = ["async"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data structures and utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "6.1.0"
parking_lot = "0.12"

# Logging and tracing
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
with-capability = ["dep:lion_capability"]
with-concurrency = ["dep:lion_concurrency"]

[dev-dependencies]
tracing-subscriber = "0.3"