[package]
name = "lion_observability"
version = "0.1.0"
edition = "2021"
description = "Observability framework for the Lion microkernel"
authors = ["Haiyang Li"]
license = "Apache-2.0"

[dependencies]
# Core functionality
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.29.0"
opentelemetry = { version = "0.28.0" }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28.0", features = ["http-proto", "grpc-tonic", "metrics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.32", features = ["rt", "macros", "sync", "time"], optional = true }
async-trait = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
once_cell = "1.18"
thread_local = "1.1"
parking_lot = "0.12"
dashmap = "6.1"
chrono = "0.4"

# Optional integration with other Lion crates
lion_capability = { version = "0.1.0", optional = true, path = "../lion_capability" }
lion_core = { version = "0.1.0", optional = true, path = "../lion_core" }

[features]
default = ["metrics", "tracing", "logging", "serde"]
metrics = []
tracing = []
logging = []
serde = []
capability-integration = ["dep:lion_capability", "dep:lion_core"]
async = ["dep:tokio"]

[dev-dependencies]
tokio = { version = "1.32", features = ["full"] }
tempfile = "3.8"
criterion = "0.5"