[package]
name = "lion_policy"
version = "0.1.0"
edition = "2021"
description = "Policy system for the Lion microkernel"
authors = ["Haiyang Li"]
license = "Apache-2.0"

[dependencies]
lion_core = { path = "../lion_core" }
lion_capability = { path = "../lion_capability" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "6.1.0"
parking_lot = "0.12"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.8"
lazy_static = "1.4"
serde_json = "1.0"