[package]
name = "lion_runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime for the Lion microkernel architecture"
authors = ["Haiyang Li"]
license = "Apache-2.0"

[dependencies]
# Core dependencies
lion_core = { path = "../lion_core" }
lion_capability = { path = "../lion_capability" }
lion_isolation = { path = "../lion_isolation" }
lion_concurrency = { path = "../lion_concurrency" }
lion_observability = { path = "../lion_observability" }
lion_policy = { path = "../lion_policy" }
lion_workflow = { path = "../lion_workflow" }

# Standard Rust dependencies
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3.28"
tracing = "0.1.37"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "2.0"
anyhow = "1.0.71"
config = "0.15"
uuid = { version = "1.3.3", features = ["v4", "serde"] }

# Wasm runtime
wasmtime = "30.0"

# Web server for monitoring
warp = "0.3.5"
hyper = "1.6"

# For atomic operations
parking_lot = "0.12.1"

[dev-dependencies]
tokio-test = "0.4.2"
tempfile = "3.5.0"
assert_matches = "1.5.0"