[package]
name = "lion_workflow"
version = "0.1.0"
edition = "2021"
authors = ["Haiyang Li"]
license = "Apache-2.0"
description = "Workflow engine for Lion microkernel with capability-based security"


[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
thiserror = "2.0"
log = "0.4.17"
futures = "0.3.28"

# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
prost = "0.13"    # Protocol Buffers
bytes = "1.4.0"     # For efficient buffer handling

# Storage
bincode = "1.3.3"    # Efficient binary serialization
uuid = { version = "1.3.3", features = ["v4", "serde"] }

# Cryptography and testing
sha2 = "0.10"        # SHA-2 hash functions
tempfile = "3.3"     # Temporary file handling for tests
num_cpus = "1.13"    # CPU count detection

# Time-related
chrono = { version = "0.4.24", features = ["serde"] }

# Capability integration with Lion
lion_core = { path = "../lion_core" }
lion_capability = { path = "../lion_capability" }
lion_concurrency = { path = "../lion_concurrency" }

# Feature flags for optional components
[features]
default = ["checkpointing", "event-sourcing"]
checkpointing = []       # State persistence
event-sourcing = []      # Event sourcing for workflows
saga = []                # Saga pattern for distributed transactions

[dev-dependencies]
tokio-test = "0.4.2"
mockall = "0.13"
proptest = "1.1.0"       # Property-based testing